kubernetes_operator/resource/httpd_deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: httpd
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd
        image: docker.io/library/httpd:latest
        ports:
        - containerPort: 80
