kubernetes_operator/resource/httpd_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httd-svc
  labels:
    export-type: ingress-nginx
spec:
  selector:
    app: httpd
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
