kubernetes_operator/resource/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: operator-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /httpd-svc
        backend:
          serviceName: httpd-svc
          servicePort: 8080
